--- a/css/skate_skills.css
+++ b/css/skate_skills.css
@@ -60,3 +60,21 @@ body {
     color: #fff;
     background-color: #3c763d;
 }
+
+.stops-and-whistles {
+    display: flex; /* equal height of the children */
+}
+
+.stops {
+    flex: 1; /* additionally, equal width
+
+    padding: 1em;*/
+
+}
+
+.whistles {
+    flex: 1; /* additionally, equal width
+
+    padding: 1em; */
+
+}
